syntax = "proto2";
package ROLE_MSG;

option optimize_for = LITE_RUNTIME;
option java_package = "cn.eden.gateway.message";
option java_outer_classname = "ROLE_MSG";

enum CMD_TYPE {
    MSG_TYPE_ROLE = 2;
};

enum CMD_ID{
    CTS_LOGIN = 1;
    STC_LOGIN = 2;
    CTS_CHARACTER_ID=3;
    STC_CHARACTER_ID=4;
    CTS_GET_CHARACTER_NAME=5;
    STC_GET_CHARACTER_NAME=6;	
    CTS_SET_CHARACTER_NAME=7;
    STC_SET_CHARACTER_NAME=8;
    CTS_RECONNECT = 9;
    STC_RECONNECT = 101;
    CTS_HEARTBEAT = 102;
    STC_HEARTBEAT = 103;
};

enum LOGIN_STATE
{
    SUCCESS = 1;                   //成功
    NO_ROLE= 2;                  //没有角色，需要创建
    FAILURE = 3;                   //失败
    ERROR_CREATE = 4;      //创建角色失败
    CREATE_SUCCESS = 5;   //创捷角色成功
    DISABLE = 6;                   //被封号
};

enum ACTION_RESULT
{
            CHARACTER_SUCCESS=1;
            CHARACTER_FAILED=2;
};

enum RECONNECT_RESULT
{
	RECONNECT_SUCCESS = 1; //重连成功
                  RECONNECT_FAILURE = 2;   // 重连失败
}


message CTS_LOGIN_MSG {
	required uint32 id			= 1; //用户Id
	required string fast_certificate		=2;//快速登录凭证	
};

message STC_LOGIN_MSG {
	required LOGIN_STATE state			= 1; //登录结果
	optional string info		= 2; //登录信息
	optional uint32 userId	= 3; //用户ID
	optional string name                 =4;//名字
	optional uint32 level                  =5;//等级
	optional uint32 exp                  =6;//经验
	optional uint32 gold                  =7;//金币
	optional uint32 diamond                  =8;//钻石
	optional uint32 characteristic                  =9;//形象类型
	optional string fast_certificate	=10; //快速登陆凭证
};
message CTS_CHARACTER_ID_MSG
{
                required uint32  character_id                    =1;//玩家角色id
};
message STC_CHARACTER_ID_MSG
{
                required ACTION_RESULT RESULT=1;
                optional string INFO=2;
};
message STC_GET_CHARACTER_NAME_MSG
{
                 required ACTION_RESULT RESULT=1;
                 optional string INFO=2;
                 optional string CHARACTER_NAME=3;
};
message CTS_SET_CHARACTER_NAME_MSG
{
                 required string CHARACTER_NAME=1;
};
message STC_SET_CHARACTER_NAME_MSG
{
                 required ACTION_RESULT RESULT=1;
                 optional string INFO=2;
};

message CTS_RECONNECT_MSG
{
	required uint32 id			= 1; //用户Id
	required string fast_certificate		=2;//快速登录凭证	
	required uint32 msg_sequence = 3;                   //最后收到的通讯协议轮询序号
}

message STC_RECONNECT_MSG
{
	required RECONNECT_RESULT result = 1;	//返回结果
	optional string info = 2;	//结果信息
	optional string fast_certificate = 3;	//登录token
}